[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/storage_ui.gd" id="1"]

[node name="StorageUI" type="CanvasLayer"]
layer = 5
visible = false
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.95

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Creature Storage"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyPanel" type="VBoxContainer" parent="Panel/MarginContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PartyLabel" type="Label" parent="Panel/MarginContainer/VBox/HBox/PartyPanel"]
layout_mode = 2
text = "Party (0/3)"
horizontal_alignment = 1

[node name="PartyScroll" type="ScrollContainer" parent="Panel/MarginContainer/VBox/HBox/PartyPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="PartyList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/HBox/PartyPanel/PartyScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/VBox/HBox"]
layout_mode = 2

[node name="StoragePanel" type="VBoxContainer" parent="Panel/MarginContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StorageLabel" type="Label" parent="Panel/MarginContainer/VBox/HBox/StoragePanel"]
layout_mode = 2
text = "Storage (0/10)"
horizontal_alignment = 1

[node name="StorageScroll" type="ScrollContainer" parent="Panel/MarginContainer/VBox/HBox/StoragePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StorageList" type="VBoxContainer" parent="Panel/MarginContainer/VBox/HBox/StoragePanel/StorageScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeButton" type="Button" parent="Panel/MarginContainer/VBox/HBox/StoragePanel"]
layout_mode = 2
text = "Upgrade Storage"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Close"
